fix(zen-avatar-details): add no wrap style

--- a/src/components/zen-avatar-details/zen-avatar-details.scss
+++ b/src/components/zen-avatar-details/zen-avatar-details.scss
@@ -1,4 +1,5 @@
 :host {
   display: flex;
   align-items: center;
+  white-space: nowrap;
 }
